welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if(temp<=60 && temp>=90 && isSummer=false)
                                ^squirrelPlay:4: error: not found: value temps
	if(temps <=60 && temp>=100 && isSummer=true)
           ^